--- a/notebooks/visualizations.ipynb
+++ b/notebooks/visualizations.ipynb
@@ -122,17 +122,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "da264e2e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x12ff2ebc0>"
+       "<matplotlib.image.AxesImage at 0x11d31ec20>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -150,6 +150,10 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "'''\n",
+    "isolate test image\n",
+    "'''\n",
+    "\n",
     "# TODO: also try test_img = X_test[1]: a better entropy example???\n",
     "test_img = X_test[11]\n",
     "\n",
@@ -158,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "52335a80",
    "metadata": {},
    "outputs": [
@@ -168,7 +172,7 @@
        "np.float64(6.71126926689652)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "31e8ac19",
    "metadata": {},
    "outputs": [
@@ -192,13 +196,17 @@
        "18"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from src.image_tiler import make_img_tiles\n",
+    "\n",
+    "'''\n",
+    "make tiles\n",
+    "'''\n",
     "\n",
     "h, w, = 200, 200\n",
     "overlap = .5\n",
@@ -278,11 +286,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "ab11c9fa",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Display each tile\n",
+    "\n",
     "# for tile in tiles:\n",
     "#     plt.figure()\n",
     "#     plt.imshow(tile, cmap='gray')"
@@ -290,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "a030f4e3",
    "metadata": {},
    "outputs": [
@@ -298,15 +308,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-07-26 08:38:17.361118: I metal_plugin/src/device/metal_device.cc:1154] Metal device set to: Apple M1 Pro\n",
-      "2025-07-26 08:38:17.361163: I metal_plugin/src/device/metal_device.cc:296] systemMemory: 16.00 GB\n",
-      "2025-07-26 08:38:17.361169: I metal_plugin/src/device/metal_device.cc:313] maxCacheSize: 5.33 GB\n",
+      "2025-07-31 12:10:22.061549: I metal_plugin/src/device/metal_device.cc:1154] Metal device set to: Apple M1 Pro\n",
+      "2025-07-31 12:10:22.061581: I metal_plugin/src/device/metal_device.cc:296] systemMemory: 16.00 GB\n",
+      "2025-07-31 12:10:22.061586: I metal_plugin/src/device/metal_device.cc:313] maxCacheSize: 5.33 GB\n",
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "I0000 00:00:1753544297.361436 7728731 pluggable_device_factory.cc:305] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
-      "I0000 00:00:1753544297.361783 7728731 pluggable_device_factory.cc:271] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n",
+      "I0000 00:00:1753989022.061601 10643005 pluggable_device_factory.cc:305] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
+      "I0000 00:00:1753989022.061622 10643005 pluggable_device_factory.cc:271] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n",
       "/Users/ME/CODING/banksy_cnn/.venv/lib/python3.10/site-packages/keras/src/saving/saving_lib.py:802: UserWarning: Skipping variable loading for optimizer 'adam', because it has 34 variables whereas the saved optimizer has 38 variables. \n",
       "  saveable.load_own_variables(weights_store.get(inner_path))\n",
-      "2025-07-26 08:38:17.829503: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:117] Plugin optimizer for device_type GPU is enabled.\n"
+      "2025-07-31 12:10:22.455193: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:117] Plugin optimizer for device_type GPU is enabled.\n"
      ]
     },
     {
@@ -316,6 +326,7 @@
       "Model loaded successfully from models/saved/cnn_200x200_overlap0.5_entropy2.0_3layer_fold4.keras\n",
       "\n",
       "Evaluating on test set...\n",
+      "Test Image 1: There were 16/18 for testing\n",
       "\n",
       "Test Set Results (Image-level):\n",
       "classification-threshold: 0.4\n",
@@ -330,7 +341,7 @@
     "from src.evaluate import evaluate_on_test_set\n",
     "\n",
     "model_path = 'models/saved/cnn_200x200_overlap0.5_entropy2.0_3layer_fold4.keras'\n",
-    "test_metrics, image_predictions, image_true_labels, tile_predictions = evaluate_on_test_set([test_img], [1], hyperparams=None, model_path=model_path, model=None)"
+    "test_metrics, image_pred_binary, image_true_labels, tile_predictions = evaluate_on_test_set([test_img], [1], model_path=model_path, single_img=True)"
    ]
   },
   {
